--- a/index.html
+++ b/index.html
@@ -339,22 +339,22 @@
                               </g>
                             </svg></i></div>
                         <div class="maximenuck_box">
-                          <a href="#" class="maximenuck_box_item">Стены (перегородки) </a>
-                          <a href="#" class="maximenuck_box_item">Плитка </a>
-                          <a href="#" class="maximenuck_box_item">Штукатурка (шпаклевка) </a>
-                          <a href="#" class="maximenuck_box_item">Обои</a>
-                          <a href="#" class="maximenuck_box_item">Краска </a>
-                          <a href="#" class="maximenuck_box_item">Полы (стяжка) </a>
-                          <a href="#" class="maximenuck_box_item">Паркет (ламинат) </a>
-                          <a href="#" class="maximenuck_box_item">Ковролин </a>
-                          <a href="#" class="maximenuck_box_item">Линолиум </a>
-                          <a href="#" class="maximenuck_box_item">Потолок </a>
-                          <a href="#" class="maximenuck_box_item">Окна</a>
-                          <a href="#" class="maximenuck_box_item">Двери</a>
-                          <a href="#" class="maximenuck_box_item">Сантехника </a>
-                          <a href="#" class="maximenuck_box_item">Электрика</a>
-                          <a href="#" class="maximenuck_box_item">Оборудование </a>
-                          <a href="#" class="maximenuck_box_item">Мебель </a>
+                          <a href="./wall.html" class="maximenuck_box_item">Стены (перегородки) </a>
+                          <a href="./floor.html#plitka" class="maximenuck_box_item">Плитка </a>
+                          <a href="./wall.html#shtukaturka" class="maximenuck_box_item">Штукатурка (шпаклевка) </a>
+                          <a href="./wall.html#oboi" class="maximenuck_box_item">Обои</a>
+                          <a href="./floor.html#kraska" class="maximenuck_box_item">Краска </a>
+                          <a href="./floor.html" class="maximenuck_box_item">Полы (стяжка) </a>
+                          <a href="./floor.html#parket" class="maximenuck_box_item">Паркет (ламинат) </a>
+                          <a href="./floor.html#kovrolin" class="maximenuck_box_item">Ковролин </a>
+                          <a href="./floor.html#linolium" class="maximenuck_box_item">Линолиум </a>
+                          <a href="./ceiling.html" class="maximenuck_box_item">Потолок </a>
+                          <a href="./window.html#okna" class="maximenuck_box_item">Окна</a>
+                          <a href="./window.html#dveri" class="maximenuck_box_item">Двери</a>
+                          <a href="./window.html#santechnika" class="maximenuck_box_item">Сантехника </a>
+                          <a href="./window.html#elektrika" class="maximenuck_box_item">Электрика</a>
+                          <a href="./window.html#oborudovanie" class="maximenuck_box_item">Оборудование </a>
+                          <a href="./window.html#mebel" class="maximenuck_box_item">Мебель </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck level1">
@@ -399,7 +399,7 @@
                           href="/steny-pol-potolok.html"><span class="titreck">Алмазное бурение</span></a>
                       </li>
                       <li data-level="1" class="maximenuck  level1"><a class="maximenuck "
-                          href="/steny-pol-potolok.html#tab2"><span class="titreck">Перепланировка</span></a>
+                          href="./redevelopment.html"><span class="titreck">Перепланировка</span></a>
                       </li>
                       <li data-level="1" class="maximenuck  level1">
                         <div class="maximenuck maximenuck_item"><span class="titreck">Вывоз мусора</span><i><svg
@@ -430,10 +430,10 @@
                               </g>
                             </svg></i></div>
                         <div class="maximenuck_box">
-                          <a href="#" class="maximenuck_box_item">Фото</a>
-                          <a href="#" class="maximenuck_box_item">Видео </a>
+                          <a href="./contact.html#foto" class="maximenuck_box_item">Фото</a>
+                          <a href="./contact.html#video" class="maximenuck_box_item">Видео </a>
                           <a href="./contact.html#sovet" class="maximenuck_box_item">Советы </a>
-                          <a href="#" class="maximenuck_box_item">Контакты </a>
+                          <a href="./contact.html#contact" class="maximenuck_box_item">Контакты </a>
                         </div>
                       </li>
                     </ul>
@@ -954,9 +954,8 @@
 
   <script src="./js/main.js"></script>
   <script src="./js/bootstrap.min.js"></script>
-  <script src="./js/jbform.js"></script>
   <script src="./js/scripts.js"></script>
-
+  <script src="./js/init.js"></script>
 
 </body>
 
