--- a/floor.html
+++ b/floor.html
@@ -444,18 +444,18 @@
               <div class="itemBody">
                 <div class="tabs">
                   <ul class="tabs__caption">
-                    <a href="#" class="active">Стяжка</a>
-                    <a href="#" class="">Дерево</a>
-                    <a href="#" class="">Бетон</a>
-                    <a href="#" class="">Плитка</a>
-                    <a href="#" class="">Краска</a>
-                    <a href="#" class="">Паркет</a>
-                    <a href="#" class="">Ламинат</a>
-                    <a href="#" class="">Ковролин</a>
-                    <a href="#" class="">Линолиум</a>
+                    <a href="#stajgka" class="active">Стяжка</a>
+                    <a href="#derevo" class="">Дерево</a>
+                    <a href="#beton" class="">Бетон</a>
+                    <a href="#plitka" class="">Плитка</a>
+                    <a href="#kraska" class="">Краска</a>
+                    <a href="#parket" class="">Паркет</a>
+                    <a href="#laminat" class="">Ламинат</a>
+                    <a href="#kovrolin" class="">Ковролин</a>
+                    <a href="#linolium" class="">Линолиум</a>
                   </ul>
                   <div class="tabs__content active">
-                    <table class="table">
+                    <table class="table" id="stajgka">
                       <thead>
                         <tr>
                           <th> Перечень услуг (стяжка) </th>
@@ -604,7 +604,7 @@
                       </tbody>
                     </table>
 
-                    <table class="table">
+                    <table class="table" id="derevo">
                       <thead>
                         <tr>
                           <th> Перечень услуг (дерево) </th>
@@ -661,7 +661,7 @@
                       </tbody>
                     </table>
 
-                    <table class="table">
+                    <table class="table" id="beton">
                       <thead>
                         <tr>
                           <th>Перечень услуг (бетон) </th>
@@ -784,7 +784,7 @@
 
                       </tbody>
                     </table>
-                    <table class="table">
+                    <table class="table" id="plitka">
                       <thead>
                         <tr>
                           <th> Перечень услуг (плитка) </th>
@@ -842,7 +842,7 @@
                       </tbody>
                     </table>
 
-                    <table class="table">
+                    <table class="table" id="kraska">
                       <thead>
                         <tr>
                           <th> Перечень услуг (краска) </th>
@@ -888,7 +888,7 @@
                       </tbody>
                     </table>
 
-                    <table class="table">
+                    <table class="table" id="parket">
                       <thead>
                         <tr>
                           <th> Перечень услуг (паркет) </th>
@@ -946,7 +946,7 @@
                       </tbody>
                     </table>
 
-                    <table class="table">
+                    <table class="table" id="laminat">
                       <thead>
                         <tr>
                           <th> Перечень услуг (ламинат) </th>
@@ -989,7 +989,7 @@
                       </tbody>
                     </table>
 
-                    <table class="table">
+                    <table class="table" id="kovrolin">
                       <thead>
                         <tr>
                           <th> Перечень услуг (ковролин) </th>
@@ -1021,7 +1021,7 @@
                       </tbody>
                     </table>
 
-                    <table class="table">
+                    <table class="table" id="linolium">
                       <thead>
                         <tr>
                           <th> Перечень услуг (линолеум) </th>
@@ -1066,7 +1066,7 @@
       <div class="row">
         <div class="col-md-12 col-xs-12 col-sm-12 bz-one">
           <div class="moduletable">
-            <h4>АКЦИЯ! ТОЛЬКО В ИЮЛЕ СКИДКИ НА ДЕМОНТАЖ КВАРТИРЫ!</h4>
+            <h4>АКЦИЯ! ТОЛЬКО В <span id="month">ИЮЛЕ</span> СКИДКИ НА ДЕМОНТАЖ КВАРТИРЫ!</h4>
           </div>
         </div>
         <div class="col-md-12 col-xs-12 col-sm-12">
@@ -2204,7 +2204,7 @@
 
   <script src="./js/main.js"></script>
   <script src="./js/bootstrap.min.js"></script>
-
+  <script src="./js/init.js"></script>
   <script src="./js/scripts.js"></script>
 
 
